manifests/argocd/argocd-ingressroute-local.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.local`)
      kind: Rule     
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: pebble
