manifests/argocd/argocd-ingressroute-net.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.example.com`)
      kind: Rule     
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: example-com-tls
